force-app/main/default/objects/BLN_AccountAlternativeName__c/BLN_AccountAlternativeName__c.object-meta.xml
<CustomObject>
    <description>FOUK-8128. This is a new object name as Account Alternative Name.</description>
    <label>Account Alternative Name</label>
    <nameField>
        <displayFormat>AAN-{0000}</displayFormat>
        <label>Alternative Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Alternative Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>