force-app/main/default/objects/BLN_AccountAlternativeName__c/fields/BLN_Account__c.field-meta.xml
<CustomField>
    <fullName>BLN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-8128. This field is the relationship between Account and Account Alternative Name.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Alternative Names</relationshipLabel>
    <relationshipName>Account_Alternative_Names</relationshipName>
    <type>Lookup</type>
</CustomField>