force-app/main/default/objects/BLN_AccountAlternativeName__c/fields/BLN_AccountAlternateNameID__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountAlternateNameID__c</fullName>
    <description>FOUK-11876</description>
    <label>Account Alternate Name ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>