force-app/main/default/objects/BLN_AccountAlternativeName__c/fields/BLN_AlternativeAccountName__c.field-meta.xml
<CustomField>
    <fullName>BLN_AlternativeAccountName__c</fullName>
    <description>FOUK-8128. This field is the reference of Alternative Account Name.</description>
    <label>Alternative Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>