force-app/main/default/objects/BLN_AccountAlternativeName__c/fields/BLN_MDMAccountAlternativeNameID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMAccountAlternativeNameID__c</fullName>
    <description>FOUK-11876</description>
    <label>MDM Account Alternative Name ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>